# allocators

./: Cargo.toml
benches/: slab-bench.rs
src/: lib.rs  main.rs  new_slab.rs
src/frame/: buddy2.rs  buddy_system.rs  mod.rs
src/heap/: explicit_free_list.rs  mod.rs
src/slab/: atomic.rs  mod.rs  std_impl.rs  tid.rs
