[package]
name = "allocators"
version = "0.1.0"
authors = ["lsongzhi <lsongzhi@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
bench = ["threadpool"]

[[bin]]
name = "slab-run"
required-features = ["bench"]

[[bench]]
name = "slab-bench"
harness = false
required-features = ["bench"]

[dependencies]
spin = { version = "0.9", default-features = false, features = ["mutex", "spin_mutex", "lazy"] }
smallvec = "1.6"
cache-padded = "1.1"
atomic-stamped-ptr = { path = "../atomic-stamped-ptr" }
dashmap = { version = "3.11", features = ["no_std"] }
threadpool = { version = "1.8", optional = true }

[dev-dependencies]
criterion = "0.3"
slab = { version = "0.4", default-features = false }
sharded-slab = "0.1"
threadpool = "1.8"
