[package]
name = "allocators"
version = "0.1.0"
authors = ["lsongzhi <lsongzhi@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
with_std = ["threadpool"]

[[bin]]
name = "slab-run"
required-features = ["with_std"]

[[bench]]
name = "slab-bench"
harness = false
required-features = ["with_std"]

[dependencies]
spin = { version = "0.9", default-features = false, features = ["mutex", "spin_mutex", "lazy", "rwlock"] }
smallvec = "1.8"
cache-padded = "1.2"
atomic-stamped-ptr = { path = "../atomic-stamped-ptr" }
threadpool = { version = "1.8", optional = true }

[dev-dependencies]
criterion = "0.3"
slab = { version = "0.4", default-features = false }
sharded-slab = "0.1"
threadpool = "1.8"
